[1.1] cnn working with access to layers after presentation